--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+* {
+    overflow-x: hidden;
+}
 header {
     text-align: center;
-    color: white;
-    background-color: black;
+}
+
+.custom-a:hover{
+    color: rgb(84, 181, 194);
 }
 
 #questionEl {
@@ -49,9 +54,7 @@ header {
     text-align: center;
 }
 
-.custom-bg {
-    background-color: tan;
-}
+
 
 .custom-li {
     list-style: none;
